--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="HandheldFriendly" content="true" />
         <title>Web Socket Test</title>
         <link href="css/style.css" rel="stylesheet" />
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
         <script src="js/jcookie.js"></script>
         <script src="socket.io/socket.io.js"></script>
         <script src="js/core.js"></script>
